17-02-20022 Se agrega el envio del formulario por medio de redes sosciales o whatsapp.

--- a/Conservapp/Conservapp/Conservapp/Views/ItemsPage.xaml
+++ b/Conservapp/Conservapp/Conservapp/Views/ItemsPage.xaml
@@ -29,7 +29,6 @@
                     x:Name="XNContingenciaEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding ContingenciaEntry, Mode=TwoWay}"/>
 
@@ -41,7 +40,6 @@
                     x:Name="XNFechaEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding FechaEntry, Mode=TwoWay}"/>
                 <Label 
@@ -52,7 +50,6 @@
                     x:Name="XNHoraEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding HoraEntry, Mode=TwoWay}"/>
 
@@ -64,7 +61,6 @@
                     x:Name="XNNombreevaluadorEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding NombreevaluadorEntry, Mode=TwoWay}"/>
 
@@ -76,7 +72,6 @@
                     x:Name="XNTelefonoEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding TelefonoEntry, Mode=TwoWay}"/>
 
@@ -85,12 +80,11 @@
                     VerticalTextAlignment="Center" 
                     TextColor="White" />
                 <custom:CustomEntry 
-                    x:Name="XNAcompañanteVisitaEntry" 
+                    x:Name="XNAcompananteVisitaEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
-                    Text="{Binding AcompañanteVisitaEntry, Mode=TwoWay}"/>
+                    Text="{Binding AcompananteVisitaEntry, Mode=TwoWay}"/>
 
                     <Label Text="EVALUACIÓN"
                            TextColor="{StaticResource Blanco}"
@@ -98,11 +92,20 @@
                             FontSize="Subtitle"/>
 <!--Falta los radio buton-->
               
-                <!--<Label Text="Condiciones preexistentes"
+                <Label Text="Condiciones preexistentes"
                            TextColor="{StaticResource Blanco}"
                            HorizontalOptions="StartAndExpand"
-                            FontSize="Subtitle"/>-->
-                
+                            FontSize="Subtitle"/>
+                <Label 
+                    Text="Uso actual:" 
+                    VerticalTextAlignment="Center" 
+                    TextColor="White" />
+                <custom:CustomEntry 
+                    x:Name="XNUsoActualEntry" 
+                    WidthRequest="200" 
+                    Keyboard="Text" 
+                    TextColor="{StaticResource Blanco}"
+                    Text="{Binding UsoActualEntry, Mode=TwoWay}"/>
                 <Label Text="Estado de conservación:"
                            TextColor="{StaticResource Blanco}"
                            HorizontalOptions="StartAndExpand"
@@ -113,21 +116,21 @@
                            TextColor="{StaticResource Blanco}"
                            HorizontalOptions="StartAndExpand"
                             FontSize="Small"/>
-                    <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" 
+                    <CheckBox IsChecked="{Binding IsCheckedMB, Mode=TwoWay}" 
                           HorizontalOptions="StartAndExpand" 
                           VerticalOptions="StartAndExpand" />
                     <Label Text="Bueno"
                            TextColor="{StaticResource Blanco}"
                            HorizontalOptions="StartAndExpand"
                             FontSize="Small"/>
-                    <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" 
+                    <CheckBox IsChecked="{Binding IsCheckedB, Mode=TwoWay}" 
                           HorizontalOptions="StartAndExpand" 
                           VerticalOptions="StartAndExpand" />
                     <Label Text="Regular"
                            TextColor="{StaticResource Blanco}"
                            HorizontalOptions="StartAndExpand"
                             FontSize="Small"/>
-                    <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" 
+                    <CheckBox IsChecked="{Binding IsCheckedR, Mode=TwoWay}" 
                           HorizontalOptions="StartAndExpand" 
                           VerticalOptions="StartAndExpand" />
                 </StackLayout>
@@ -137,14 +140,14 @@
                            TextColor="{StaticResource Blanco}"
                            HorizontalOptions="StartAndExpand"
                             FontSize="Small"/>
-                    <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" 
+                    <CheckBox IsChecked="{Binding IsCheckedM, Mode=TwoWay}" 
                           HorizontalOptions="StartAndExpand" 
                           VerticalOptions="StartAndExpand" />
                     <Label Text="Critico"
                            TextColor="{StaticResource Blanco}"
                            HorizontalOptions="StartAndExpand"
                             FontSize="Small"/>
-                    <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" 
+                    <CheckBox IsChecked="{Binding IsCheckedC, Mode=TwoWay}" 
                           HorizontalOptions="StartAndExpand" 
                           VerticalOptions="StartAndExpand" />
                 </StackLayout>
@@ -158,14 +161,14 @@
                            TextColor="{StaticResource Blanco}"
                            HorizontalOptions="StartAndExpand"
                             FontSize="Small"/>
-                    <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" 
+                    <CheckBox IsChecked="{Binding IsCheckedFDMS, Mode=TwoWay}" 
                           HorizontalOptions="StartAndExpand" 
                           VerticalOptions="StartAndExpand" />
                     <Label Text="No"
                            TextColor="{StaticResource Blanco}"
                            HorizontalOptions="StartAndExpand"
                             FontSize="Small"/>
-                    <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" 
+                    <CheckBox IsChecked="{Binding IsCheckedFDMN, Mode=TwoWay}" 
                           HorizontalOptions="StartAndExpand" 
                           VerticalOptions="StartAndExpand" />
                   
@@ -180,14 +183,14 @@
                            TextColor="{StaticResource Blanco}"
                            HorizontalOptions="StartAndExpand"
                             FontSize="Small"/>
-                    <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" 
+                    <CheckBox IsChecked="{Binding IsCheckedLAS, Mode=TwoWay}" 
                           HorizontalOptions="StartAndExpand" 
                           VerticalOptions="StartAndExpand" />
                     <Label Text="No"
                            TextColor="{StaticResource Blanco}"
                            HorizontalOptions="StartAndExpand"
                             FontSize="Small"/>
-                    <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" 
+                    <CheckBox IsChecked="{Binding IsCheckedLAN, Mode=TwoWay}" 
                           HorizontalOptions="StartAndExpand" 
                           VerticalOptions="StartAndExpand" />
 
@@ -201,14 +204,14 @@
                            TextColor="{StaticResource Blanco}"
                            HorizontalOptions="StartAndExpand"
                             FontSize="Small"/>
-                    <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" 
+                    <CheckBox IsChecked="{Binding IsCheckedCT, Mode=TwoWay}" 
                           HorizontalOptions="StartAndExpand" 
                           VerticalOptions="StartAndExpand" />
                     <Label Text="Colapso parcial"
                            TextColor="{StaticResource Blanco}"
                            HorizontalOptions="StartAndExpand"
                             FontSize="Small"/>
-                    <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" 
+                    <CheckBox IsChecked="{Binding IsCheckedCP, Mode=TwoWay}" 
                           HorizontalOptions="StartAndExpand" 
                           VerticalOptions="StartAndExpand" />
                   
@@ -220,14 +223,14 @@
                            TextColor="{StaticResource Blanco}"
                            HorizontalOptions="StartAndExpand"
                            />
-                    <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" 
+                    <CheckBox IsChecked="{Binding IsCheckedIDEODUDSN, Mode=TwoWay}" 
                           HorizontalOptions="StartAndExpand" 
                           VerticalOptions="StartAndExpand" />
                     <Label Text="Fallo o asentamiento de la cimentación"
                            TextColor="{StaticResource Blanco}"
                            HorizontalOptions="StartAndExpand"
                            FontSize="Small"/>
-                    <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" 
+                    <CheckBox IsChecked="{Binding IsCheckedFOADLC, Mode=TwoWay}" 
                           HorizontalOptions="StartAndExpand" 
                           VerticalOptions="StartAndExpand" />
                 </StackLayout>
@@ -246,7 +249,6 @@
                     x:Name="XNSistemasConstructivosEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding sistemasConstructivosEntry, Mode=TwoWay}"/>
 
@@ -264,7 +266,6 @@
                     x:Name="XNLosasEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding LosasEntry, Mode=TwoWay}"/>
 
@@ -276,7 +277,6 @@
                     x:Name="XNCupulasEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding CupulasEntry, Mode=TwoWay}"/>
 
@@ -288,7 +288,6 @@
                     x:Name="XNBovedasEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding BovedasEntry, Mode=TwoWay}"/>
 
@@ -300,7 +299,6 @@
                     x:Name="XNTechumbresEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding TechumbresEntry, Mode=TwoWay}"/>
 
@@ -318,7 +316,6 @@
                     x:Name="XNMateriapiedraEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding MateriapiedraEntry, Mode=TwoWay}"/>
                 <Label 
@@ -329,7 +326,6 @@
                     x:Name="XNMtabiqueEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding MtabiqueEntry, Mode=TwoWay}"/>
                
@@ -342,7 +338,6 @@
                     x:Name="XNMconcretoEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding MconcretoEntry, Mode=TwoWay}"/>
 
@@ -354,7 +349,6 @@
                     x:Name="XNColumnasEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding ColumnasEntry, Mode=TwoWay}"/>
 
@@ -366,7 +360,6 @@
                     x:Name="XNPilastrasEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding PilastrasEntry, Mode=TwoWay}"/>
 
@@ -378,7 +371,6 @@
                     x:Name="XNContrafuertesEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding ContrafuertesEntry, Mode=TwoWay}"/>
 
@@ -395,7 +387,6 @@
                     x:Name="XNArcosEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding ArcosEntry, Mode=TwoWay}"/>
 
@@ -407,7 +398,6 @@
                     x:Name="XNVigasEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding VigasEntry, Mode=TwoWay}"/>
 
@@ -419,7 +409,6 @@
                     x:Name="XNTrabesEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding TrabesEntry, Mode=TwoWay}"/>
 
@@ -437,7 +426,6 @@
                     x:Name="XNTorresEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding TorresEntry, Mode=TwoWay}"/>
 
@@ -449,7 +437,6 @@
                     x:Name="XNEspadanasEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding EspadanasEntry, Mode=TwoWay}"/>
 
@@ -466,7 +453,6 @@
                     x:Name="XNARecubrimientosEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding ARecubrimientosEntry, Mode=TwoWay}"/>
                 <Label 
@@ -478,7 +464,6 @@
                     x:Name="XNPVentasEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding PVentasEntry, Mode=TwoWay}"/>
 
@@ -491,7 +476,6 @@
                     x:Name="XNOrnamentosEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding OrnamentosEntry, Mode=TwoWay}"/>
                 <Label 
@@ -503,7 +487,6 @@
                     x:Name="XNCandelabrosEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding CandelabrosEntry, Mode=TwoWay}"/>
                 <Label 
@@ -515,7 +498,6 @@
                     x:Name="XNPCielosrasosEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding PCielosrasosEntry, Mode=TwoWay}"/>
                 <Label 
@@ -527,7 +509,6 @@
                     x:Name="XNRetablosEntry" 
                     WidthRequest="200" 
                     Keyboard="Text" 
-                    IsReadOnly="true"
                     TextColor="{StaticResource Blanco}"
                     Text="{Binding RetablosEntry, Mode=TwoWay}"/>
                 <!--<Label 
