19-02-2022 Se termino el 2 formulario y se envia por medio de redes sociales y por email.

--- a/Conservapp/Conservapp/Conservapp/Views/AboutPage.xaml
+++ b/Conservapp/Conservapp/Conservapp/Views/AboutPage.xaml
@@ -275,7 +275,7 @@
                     TextColor="White" />
                 <Image
                     x:Name="imageobj"
-                  Source="Dashboardshell" 
+                  Source="obj" 
                   HorizontalOptions="CenterAndExpand"/>
                 <Frame 
                                     Padding="0,10,0,10"
